@@ -1,4 +1,5 @@
 0.2.0
+Removed resize mode from lfswm2 prefs.
 Minor GUI changes.
 Added clolour chooser desktop file.
 Fixed dialogs.
